tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts(strict=true).errors.txt
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(4,23): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(8,20): error TS2322: Type 'null' is not assignable to type 'U'.
  'U' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(12,20): error TS2322: Type 'null' is not assignable to type 'V'.
  'V' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(26,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(27,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(30,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(31,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(34,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(35,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(38,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(39,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(42,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(43,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(46,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(47,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(50,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(51,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(54,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(55,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(58,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(59,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(62,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(63,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(66,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(67,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(70,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(71,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(74,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(75,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(78,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(79,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(82,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(83,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(86,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(87,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(90,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(91,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(94,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(95,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(98,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts(99,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts.ts (41 errors) ====
    // object types are identical structurally
    
    class A {
        foo<T>(x: T): T { return null; }
                          ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    class B<U, V> {
        foo(x: U): U { return null; }
                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'U'.
!!! error TS2322:   'U' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    class C<V, W, X> {
        foo(x: V): V { return null; }
                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'V'.
!!! error TS2322:   'V' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    interface I<X, Y, Z, A> {
        foo(x: X): X;
    }
    
    interface I2 {
        foo<Y, Z, A, B>(x: Y): Y;
    }
    
    var a: { foo<Z, A, B, C, D>(x: Z): Z }
    var b = { foo<A, B, C, D, E, F>(x: A) { return x; } };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B<string, string>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<string, string>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string, number, boolean>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string, number, boolean>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<string, boolean, number, string>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<string, boolean, number, string>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B<string, string>); // ok
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string, number, boolean>); // ok
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I<string, number, boolean, Date>); // ok
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // no error, bug?
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B<string, string>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<string, string, boolean, Date>); // error
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<string, number>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string, number, B<string, string>>); // error
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<string, boolean>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<string, boolean>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<B<string, number>, number, Date, string>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<B<string, number>, number, Date>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<string, string, boolean>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<string, Date, RegExp, Date>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<string, Date, RegExp, boolean>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I2);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: C<number, B<string, string>, B<number, string>>); // ok
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }